# neb

./: .enject  .gitignore  AGENTS.md  README.md  bank_db.py  bank_support.py  chat_app.py  common_tools.py  db_test.py  deep_research.py  deep_search.py  embedders.py  hello.py  instrument.py  kb_local.py  kb_online.py  main.py  mcp_client.py  model.py  models.py  ocr_proofreader.md  ocr_proofreader.py  olympic.py  providers.py  providers.toml  pydantic_model.py  pyproject.toml  question_graph.py  rag.py  roulette_wheel.py  sql_gen.py  stream_hello.py  stream_markdown.py  stream_whales.py  weather.py
mal/openai/: model.py
mal/pydantic_ai/: model.py
rag/embeddings/: embedder.py
rag/store/: base.py  chroma.py  pgvector.py
rag/text/: chunk.py  pdf_loader.py
ref/: marker-options.txt  pdf-tools.md  rag-related.md  text-chunk.md
util/: fs.py  logfire_docs.py  pydantic_ai.py  search.py
