[project]
name = "neb"
version = "0.1.0"
description = "Seek the real power of AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "chromadb>=0.6.3",
    "devtools>=0.12.2",
    "duckduckgo-search>=7.5.3",
    "fastapi>=0.115.11",
    "httpx[socks]>=0.28.1",
    "langdetect>=1.0.9",
    "logfire[asyncpg,fastapi,sqlite3]>=3.7.1",
    "marker-pdf>=1.5.5",
    "pydantic-ai[logfire]>=0.0.35",
    "pydantic-graph>=0.0.36",
    "python-multipart>=0.0.20",
    "rtoml>=0.12.0",
    "spacy>=3.8.4",
    "tavily-python>=0.5.1",
    "uvicorn>=0.34.0",
]

[tool.logfire]
project_name = "neb-logfire"
send_to_logfire = 'if-token-present'
console_min_log_level = "warning"
console_show_project_link = "False"
