[project]
name = "neb"
version = "0.1.0"
description = "Seek the real power of AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg",
    "chromadb",
    "ddgs",
    "devtools",
    "fastapi",
    "httpx[socks]",
    "langdetect",
    "logfire[system-metrics]",
    "marker-pdf",
    "pydantic-ai-slim[logfire,openai,mcp]",
    "pydantic-graph",
    "python-multipart",
    "rtoml",
    "spacy[apple]",
    "tavily-python",
    "uvicorn",
]

[tool.logfire]
project_name = "neb-logfire"
send_to_logfire = 'if-token-present'
console_min_log_level = "warning"
console_show_project_link = "False"
