[project]
name = "neb"
version = "0.1.0"
description = "Seek the real power of AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg",
    "chromadb",
    "ddgs",
    "devtools",
    "fastapi",
    "googlesearch-python",
    "httpx[socks]",
    "langdetect",
    "logfire[asyncpg,system-metrics]",
    "marker-pdf",
    "pip",
    "pydantic-ai-slim[logfire,openai,mcp]",
    "pydantic-graph",
    "python-multipart",
    "rtoml",
    "spacy[apple]",
    "tavily-python",
    "uvicorn",
]

[tool.logfire]
project_name = "neb-logfire"
service_name = "neb"
send_to_logfire = 'if-token-present'
console_min_log_level = "warning"
console_show_project_link = "False"
